# cv_dnn_face

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  common.py  crop.py  crop_from_video.py  detector.py  generate_aligned_faces.py  more_doc_jp.md  move_similar_faces.py  recognizer.py  requirements.txt  setup.cfg
aligned_faces/: place_npy_files_here.txt
cv_dnn_face/: __init__.py
cv_dnn_face/model/: locate_onnx_model_here.txt
script/: crop.py  crop_face_omni_img.py  detector.py  generate_aligned_faces.py  move_similar_faces.py  recognizer.py
test/: test_detect.py
tools/: faceme_depend.py  nonst.py  offline_identification.py  xroc.py
