[metadata]
name = cv_dnn_face
version = file:VERSION
url = https://github.com/waragai-katsunori/cv_dnn_face
author = waragai-katsunori
author_email = dev@groove-x.com
description = OpenCV DNN based face recognition

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  opencv-contrib-python

[options.packages.find]
exclude =
    test*

